js/js.translator/testData/incremental/invalidation/updateExports/lib1/l1d.kt
fun fun4() = "fun4"
